<resources>
    <string name="app_name">Orders</string>
    <string name="type_product_name">Type product name</string>
    <string name="type_price_product">Type price of product</string>
    <string name="type_stock_product">Type stock product</string>
    <string name="add_product">Add product</string>
    <string name="produc_stock">Produc Stock</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Produc Name</string>
    <string name="save_product">Save product</string>
    <string name="img_filename">Img Filename</string>
    <string name="name">Name</string>
    <string name="save_platform">Save Platform</string>
    <string name="platform">Platform</string>
    <string name="img_filenamee">Img Filename</string>
    <string name="namee">Name</string>
</resources>
