<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_platform">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iv_platform"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_platform"
            android:layout_toRightOf="@+id/iv_platform"
            android:layout_alignParentTop="true"
            android:textSize="10pt"
            android:text="@string/platform"


            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_edit_platform"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_alignTop="@+id/iv_platform"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_img_filename"
            android:layout_toRightOf="@+id/iv_platform"
            android:layout_below="@+id/tv_platform"
            android:textSize="10pt"
            android:text="@string/img_filenamee"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:textSize="10pt"
            android:text="@string/namee"
            android:layout_below="@+id/bt_edit_platform"
            android:layout_alignRight="@+id/tv_platform"
            android:layout_alignEnd="@+id/tv_platform" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delete_platform"
            android:src="@android:drawable/ic_menu_delete"
            android:layout_below="@+id/tv_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</android.support.v7.widget.CardView>